--- a/index.html
+++ b/index.html
@@ -743,7 +743,7 @@
               <div class="flip-card-inner">
                 <div class="flip-card-front">
                   <img
-                    src="https://placehold.co/400x280/5b21b6/ffffff?text=Onboarding+Portal"
+                    src="./asset/project4.PNG"
                     alt="Onboarding Portal Thumbnail"
                   />
                 </div>
@@ -1008,7 +1008,7 @@
               <p class="mb-2">You can also find me on:</p>
               <div class="flex justify-center space-x-6">
                 <a
-                  href="#"
+                  href="https://www.linkedin.com/in/osahon-uhomohasebhor-652a21238/"
                   class="text-purple-300 hover:text-purple-400 text-3xl transition duration-300 transform hover:scale-110"
                   aria-label="LinkedIn"
                 >
@@ -1026,7 +1026,7 @@
                   </svg>
                 </a>
                 <a
-                  href="#"
+                  href="https://github.com/osahonjonathan"
                   class="text-purple-300 hover:text-purple-400 text-3xl transition duration-300 transform hover:scale-110"
                   aria-label="GitHub"
                 >
@@ -1053,7 +1053,7 @@
     <!-- Footer -->
     <footer class="bg-black text-white py-8 mt-8 rounded-t-lg shadow-inner">
       <div class="container mx-auto text-center px-6">
-        <p>&copy; 2025 John Doe. All rights reserved.</p>
+        <p>&copy; 2025 Osahon Jonathan. All rights reserved.</p>
         <p class="text-sm mt-2">
           Designed with ❤️ using HTML and Tailwind CSS.
         </p>
