--- a/index.html
+++ b/index.html
@@ -590,7 +590,7 @@
                     >
                   </div>
                   <a
-                    href="osahon-jonathan-lendsqr-fe-test.netlify.app"
+                    href="https://osahon-jonathan-lendsqr-fe-test.netlify.app/"
                     class="text-purple-300 hover:text-purple-400 font-semibold inline-flex items-center group"
                   >
                     View Project
@@ -654,7 +654,7 @@
                     >
                   </div>
                   <a
-                    href="role-dashboard.netlify.app"
+                    href="https://role-dashboard.netlify.app"
                     class="text-purple-300 hover:text-purple-400 font-semibold inline-flex items-center group"
                   >
                     View Project
@@ -713,7 +713,7 @@
                     >
                   </div>
                   <a
-                    href="osasco-user-management.netlify.app"
+                    href="https://osasco-user-management.netlify.app"
                     class="text-purple-300 hover:text-purple-400 font-semibold inline-flex items-center group"
                   >
                     View Project
