--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
       /* Project Card Flip Effect */
       .flip-card {
         background-color: transparent;
-        width: 100%;
+        width: 350px;
         height: 350px; /* Increased height for consistent card size and better visibility */
         perspective: 1000px; /* 3D effect */
         border-radius: 0.5rem; /* rounded-lg */
@@ -545,13 +545,13 @@
         id="projects"
         class="bg-black rounded-lg shadow-md my-8 py-24 md:py-36 animate-fade-in"
       >
-        <div class="container mx-auto px-8 text-center">
+        <div class="container mx-auto px-12 text-center">
           <h2
             class="text-4xl font-bold text-white mb-10 border-b-4 border-purple-300 pb-2 inline-block"
           >
             My Projects
           </h2>
-          <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8">
+          <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4">
             <!-- Project Card 1: Admin Portal -->
             <div class="flip-card animate-slide-up" style="animation-delay: 0s">
               <div class="flip-card-inner">
