--- a/index.html
+++ b/index.html
@@ -545,7 +545,7 @@
         id="projects"
         class="bg-black rounded-lg shadow-md my-8 py-24 md:py-36 animate-fade-in"
       >
-        <div class="container mx-auto px-12 text-center">
+        <div class=" mx-auto px-12 text-center">
           <h2
             class="text-4xl font-bold text-white mb-10 border-b-4 border-purple-300 pb-2 inline-block"
           >
